[package]
name = "fixed-scrollable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The core intefaces for the iced framework.
iced = { git = "https://github.com/iced-rs/iced", features = ["advanced"], branch = "master"}